--- a/com.bgdt.AgriControl/res/layout/previewitem.xml
+++ b/com.bgdt.AgriControl/res/layout/previewitem.xml
@@ -3,16 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <SurfaceView
+    <!-- <SurfaceView
         android:id="@+id/preview_surfaceview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/black"
-        ></SurfaceView>
+        ></SurfaceView> -->
 	<WebView 
 	    android:id="@+id/preview_webview"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:background = "@color/black"
 	    />
 	    
